--- a/languages/el_GR.json
+++ b/languages/el_GR.json
@@ -267,8 +267,15 @@
             "Χριστούγεννα",
             "Χειμωνιάτικο"
         ],
-        "valentine": "Άγιος Βαλεντίνος\nΑγ. Βαλεντίνος\nΒαλεντίνος",
-        "independence": "Ημέρα Ανεξαρτησίας",
+        "valentine": [
+            "Άγιος Βαλεντίνος",
+            "Αγ. Βαλεντίνος",
+            "Βαλεντίνος"
+        ],
+        "independence": [
+            "Ημέρα Ανεξαρτησίας",
+            "Ανεξαρτησία"
+        ],
         "dotd": [
             "Ημέρα των Νεκρών",
             "Νεκροί"
